# wslscript

./: .gitignore  Cargo.toml  LICENSE  README.md  _config.yml  build.rs  package-release.ps1
.cargo/: config.toml
_layout/: default.html
_layouts/: default.html
assets/: manifest.xml
assets/css/: style.scss
examples/: 'щ(ಠ益ಠщ)'.sh  (ಠ_ಠ).txt  (☞ﾟ∀ﾟ)☞ 'щ(ಠ益ಠщ)'.sh  Drag 'me!'  bash-test.sh  python-test.sh
src/: error.rs  font.rs  gui.rs  icon.rs  main.rs  registry.rs  win32.rs  wsl.rs
wslscript/: Cargo.toml  build.rs
wslscript/src/: error.rs  font.rs  gui.rs  icon.rs  main.rs  win32.rs  wsl.rs
wslscript/src/gui/: listview.rs  mod.rs
wslscript_common/: Cargo.toml
wslscript_common/src/: error.rs  font.rs  icon.rs  lib.rs  registry.rs  ver.rs  win32.rs  wsl.rs
wslscript_handler/: Cargo.toml  build.rs
wslscript_handler/src/: interface.rs  lib.rs  progress.rs  types.rs
