[package]
name = "wslscript"
description = "Shell script handler for WSL"
version = "0.4.0"
authors = ["Joni Eskelinen <jonieske@gmail.com>"]
edition = "2018"

[dependencies]
failure = "^0.1.5"
num-derive = "^0.2.5"
num-traits = "^0.2.8"
shell32-sys = "^0.1.2"
widestring = "^0.4.0"
wchar = "^0.5.0"

[dependencies.winapi]
version = "^0.3.7"
features = ["winuser", "winbase", "errhandlingapi", "commctrl", "processenv", "shellapi"]

[dependencies.winreg]
version = "^0.6.0"
features = ["transactions"]

[build-dependencies]
winres = "^0.1.11"
