[package]
name = "wslscript"
description = "Shell script handler for WSL."
version = "0.6.2"
authors = ["Joni Eskelinen <jonieske@gmail.com>"]
edition = "2018"

[dependencies]
failure = "^0.1.8"
num-derive = "^0.3.2"
num-traits = "^0.2.12"
shell32-sys = "^0.1.2"
widestring = "^0.4.2"
wchar = "^0.6.1"
guid-create = "^0.1.1"
simple-logging = "^2.0.2"

[dependencies.winapi]
version = "^0.3.9"
features = [
    "winuser",
    "winbase",
    "errhandlingapi",
    "commctrl",
    "processenv",
    "shellapi",
]

[dependencies.winreg]
version = "^0.7.0"
features = ["transactions"]

[dependencies.log]
version = "^0.4.14"
features = ["release_max_level_off"]

[features]
debug = []

[build-dependencies]
winres = "^0.1.11"
toml = "^0.5"
serde = "^1"
serde_derive = "^1"
chrono = "^0.4"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.release.package."*"]
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
