[package]
name = "wslscript"
description = "Shell script handler for WSL."
version = "0.7.0-rc.2"
authors = ["Joni Eskelinen <jonieske@gmail.com>"]
license = "MIT"
homepage = "https://sop.github.io/wslscript/"
repository = "https://github.com/sop/wslscript"
edition = "2021"

[dependencies]
num-derive = "0.3.2"
num-traits = "0.2.12"
once_cell = "1.9.0"
widestring = "0.5.1"
wchar = "0.11.0"
log = { version = "0.4.14", features = ["release_max_level_off"] }
simple-logging = "2.0.2"

[dependencies.wslscript_common]
version = "*"
path = "../wslscript_common"

[dependencies.winapi]
version = "0.3.9"
features = ["winuser", "winbase", "errhandlingapi", "commctrl", "processenv"]

[features]
debug = []

[build-dependencies]
winres = "0.1.11"
toml = "0.5"
serde = "1"
serde_derive = "1"
chrono = "0.4"
