[package]
name = "wslscript"
description = "Shell script handler for WSL."
version = "0.7.0"
authors = ["Joni Kollani <joni.kollani@gmail.com>"]
license = "MIT"
homepage = "https://sop.github.io/wslscript/"
repository = "https://github.com/sop/wslscript"
edition = "2021"

[dependencies]
num_enum = "0.7.3"
once_cell = "1.19"
widestring = "1.1"
wchar = "0.11"
log = { version = "0.4", features = ["release_max_level_off"] }
simple-logging = "2.0"

[dependencies.wslscript_common]
version = "*"
path = "../wslscript_common"

[dependencies.winapi]
version = "0.3.9"
features = ["winuser", "winbase", "errhandlingapi", "commctrl", "processenv"]

[features]
debug = []

[build-dependencies]
winres = "0.1"
toml = "0.8"
serde = "1"
serde_derive = "1"
chrono = "0.4"
