[package]
name = "wslscript_common"
description = "Common libraries for WSL Script."
version = "0.1.0"
authors = ["Joni Eskelinen <jonieske@gmail.com>"]
license = "MIT"
homepage = "https://sop.github.io/wslscript/"
repository = "https://github.com/sop/wslscript"
edition = "2021"

[dependencies]
once_cell = "1.18.0"
failure = "0.1.8"
widestring = "1.0.2"
wchar = "0.11.0"
guid_win = "0.2.0"
libloading = "0.8.0"
log = { version = "0.4.19", features = ["release_max_level_off"] }
simple-logging = "2.0.2"

[dependencies.winapi]
version = "0.3.9"
features = [
    "winuser",
    "winbase",
    "winerror",
    "winver",
    "errhandlingapi",
    "commctrl",
    "processenv",
    "shellapi",
]

[dependencies.winreg]
version = "0.50.0"
features = ["transactions"]

[features]
debug = []
