[package]
name = "wslscript_common"
description = "Common libraries for WSL Script."
version = "0.1.0"
authors = ["Joni Kollani <joni.kollani@gmail.com>"]
license = "MIT"
homepage = "https://sop.github.io/wslscript/"
repository = "https://github.com/sop/wslscript"
edition = "2021"

[dependencies]
thiserror = "2.0"
anyhow = "1.0"
once_cell = "1.20"
widestring = "1.1"
wchar = "0.11"
guid_win = "0.2.0"
libloading = "0.8"
log = { version = "0.4", features = ["release_max_level_off"] }
simple-logging = "2.0"

[dependencies.winapi]
version = "0.3.9"
features = [
    "winuser",
    "winbase",
    "winerror",
    "winver",
    "errhandlingapi",
    "commctrl",
    "processenv",
    "shellapi",
]

[dependencies.winreg]
version = "0.55"
features = ["transactions"]

[features]
debug = []
