[package]
name = "wslscript_handler"
description = "Drop handler shell extension for WSL Script."
version = "0.1.0"
authors = ["Joni Kollani <joni.kollani@gmail.com>"]
license = "MIT"
homepage = "https://sop.github.io/wslscript/"
repository = "https://github.com/sop/wslscript"
edition = "2021"

[dependencies]
guid_win = "0.2.0"
num_enum = "0.7.3"
once_cell = "1.20"
bitflags = "2.8"
widestring = "1.1"
wchar = "0.11"
log = { version = "0.4", features = ["release_max_level_off"] }
simple-logging = "2.0"

[dependencies.wslscript_common]
version = "*"
path = "../wslscript_common"

[dependencies.winapi]
version = "0.3.9"
features = ["unknwnbase", "winerror", "winuser", "oleidl"]

[dependencies.windows]
version = "0.59"
features = [
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Ole",
    "Win32_System_SystemServices",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
]

[dependencies.windows-core]
version = "0.59"

[lib]
crate-type = ["cdylib"]

[features]
debug = []

[build-dependencies]
winres = "0.1"
toml = "0.8"
serde = "1"
serde_derive = "1"
chrono = "0.4"
